compiling_error.txt
In file included from C:\Trabalho-de-CE2\netlist.cpp:8:0:
C:\Trabalho-de-CE2\Componente.h:15:15: error: 'string' has not been declared
  void setName(string);
               ^
C:\Trabalho-de-CE2\Componente.h:19:2: error: 'string' does not name a type
  string getName();
  ^
C:\Trabalho-de-CE2\Componente.h:22:27: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11
  unsigned numberOfNodes = 2;
                           ^
C:\Trabalho-de-CE2\Componente.h:23:2: error: 'vector' does not name a type
  vector<unsigned> nodes;
  ^
C:\Trabalho-de-CE2\Componente.h:25:2: error: 'string' does not name a type
  string Name;
  ^
